# admin-app

./: .env.example  .gitignore  README.md  firebase-blueprint.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
src/: App.tsx  firebase.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ErrorBoundary.tsx  LedgerPrintView.tsx
src/components/modules/: AnalyticsModule.tsx  CashModule.tsx  CustomerModule.tsx  Dashboard.tsx  EmployeeModule.tsx  LedgerModule.tsx  ProductModule.tsx  PurchasesModule.tsx  SalesModule.tsx  SettingsModule.tsx  SupplierModule.tsx
src/components/ui/: Button.tsx  Card.tsx  ConfirmModal.tsx  Input.tsx  Modal.tsx  NavItem.tsx  PrintFooter.tsx  Select.tsx  Skeleton.tsx
src/lib/: db.ts
src/services/: SyncService.ts
