[package]
name = "smc-admin-portal"
version = "0.1.0"
description = "SMC ADMIN PORTAL"
authors = ["SMC"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open"] }

[features]
# by default Tauri runs in the browser, this feature is used to setup the native window
custom-protocol = [ "tauri/custom-protocol" ]
